# Headlines-Bert-T5-GPT2

./: .gitignore  README.md  chat.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yaml
src/: __init__.py  common.py
src/bert/: config.py  dataset.py  metrics.py  model.py  preprocess.py  run.py  trainer.py  utils.py
src/gpt2/: config.py  dataset.py  preprocess.py  run.py  trainer.py  utils.py
src/t5/: config.py  dataset.py  eval.py  metrics.py  preprocess.py  run.py  t5_trainer.py  train.py  trainer.py
tests/: conftest.py  test_common.py
tests/bert/: test_config.py  test_dataset.py  test_metrics.py  test_model.py  test_preprocess.py  test_trainer.py  test_utils.py
tests/gpt2/: test_config.py  test_dataset.py  test_preprocess.py  test_utils.py
tests/t5/: test_config.py  test_dataset.py  test_metrics.py  test_preprocessing.py
